--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,20 @@
+appnope==0.1.0
+decorator==4.0.11
 dj-database-url==0.4.2
 dj-static==0.0.6
 Django==1.10.5
 gunicorn==19.6.0
+ipdb==0.10.2
+ipython==5.3.0
+ipython-genutils==0.1.0
+pexpect==4.2.1
+pickleshare==0.7.4
+prompt-toolkit==1.0.13
 psycopg2==2.6.2
+ptyprocess==0.5.1
+Pygments==2.2.0
+simplegeneric==0.8.1
+six==1.10.0
 static3==0.7.0
+traitlets==4.3.2
+wcwidth==0.1.7
